cmake_minimum_required(VERSION 3.0.0)
project(TensorrtEngine)
set(CMAKE_BUILD_TYPE "Debug")
Option(MIRROR_BUILD_CLASSIFIER "build classifier test" OFF)
Option(MIRROR_BUILD_DETECTION "build detection test" ON)
Option(MIRROR_BUILD_SEGMENTATION "build segmentation test" OFF)
set(deploy false)
if(deploy)
    message("defined address!!!!!!!!!!")
    add_definitions("-DRELEASE")
endif()
add_subdirectory(src)